--- a/templates/base.html
+++ b/templates/base.html
@@ -38,15 +38,19 @@
             </ul>
           </div>
 
-          {% if user.is_authenticated %}
-          <div class="d-flex" role="search">
-            <div class="bg-dark text-white  p-2">Logged in as {{user.username}}</div>
-            <a href="{% url 'logout' %}"><button class="btn btn-success" type="submit">Logout</button></a>
-          </div>
-            {% else %}
-            <a href="{% url 'login' %}"><button class="btn btn-success" type="submit">Login</button></a>
-            <a href="{% url 'register' %}"><button class="btn btn-primary" type="submit">Register</button></a>
-            {% endif %}
+
+          {% comment %} header authentication section  {% endcomment %}
+                {% if user.is_authenticated %}
+                    <div class="d-flex" role="search">
+                      <div class="bg-dark text-white  p-2">Logged in as {{user.username}}</div>
+                      <a href="{% url 'logout' %}"><button class="btn btn-success" type="submit">Logout</button></a>
+                    </div>
+                {% else %}
+                  <a href="{% url 'login' %}"><button class="btn btn-success" type="submit">Login</button></a>
+                  <a href="{% url 'register' %}"><button class="btn btn-primary" type="submit">Register</button></a>
+                {% endif %}
+
+          {% comment %} header authentication section  {% endcomment %}
 
         </div>
       </nav>
